# simple503

./: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  README.md  README.rst  __pkginfo__.py  formate.toml  index.html  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  simple503.toml  stubs.txt  tox.ini
.github/: actions_build_conda.sh  actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
alabaster/: index.html
apeye/: apeye-1.0.1-py3-none-any.whl  apeye-1.0.1-py3-none-any.whl.metadata  index.html
appdirs/: index.html
babel/: index.html
cawdrey/: cawdrey-0.4.2-py3-none-any.whl  cawdrey-0.4.2-py3-none-any.whl.metadata  index.html
certifi/: index.html
chardet/: index.html
default-values/: default_values-0.5.0-py3-none-any.whl  default_values-0.5.0-py3-none-any.whl.metadata  index.html
doc-source/: Source.rst  api.rst  conf.py  index.rst  license.rst  local_extension.py  overview.rst  requirements.txt  usage.rst
doc-source/api/: simple503.rst  utils.rst
docutils/: index.html
dom-toml/: dom_toml-0.5.0-py3-none-any.whl.metadata  index.html
domdf-python-tools/: domdf_python_tools-0.10.0-py3-none-any.whl  domdf_python_tools-0.10.0-py3-none-any.whl.metadata  domdf_python_tools-0.9.2-py3-none-any.whl.metadata  domdf_python_tools-1.2.0-py3-none-any.whl  domdf_python_tools-1.2.0-py3-none-any.whl.metadata  domdf_python_tools-1.3.0-py3-none-any.whl.metadata  domdf_python_tools-1.7.0-py3-none-any.whl.metadata  domdf_python_tools-1.9.0-py3-none-any.whl  domdf_python_tools-1.9.0-py3-none-any.whl.metadata  domdf_python_tools-2.0.0-py3-none-any.whl.metadata  domdf_python_tools-2.1.0-py3-none-any.whl  domdf_python_tools-2.1.0-py3-none-any.whl.metadata  domdf_python_tools-2.2.0-py3-none-any.whl  domdf_python_tools-2.2.0-py3-none-any.whl.metadata  domdf_python_tools-2.5.0-py3-none-any.whl.metadata  domdf_python_tools-2.5.2-py3-none-any.whl.metadata  domdf_python_tools-2.6.1-py3-none-any.whl.metadata  domdf_python_tools-2.9.0-py3-none-any.whl.metadata  domdf_python_tools-2.9.1-py3-none-any.whl  domdf_python_tools-2.9.1-py3-none-any.whl.metadata  index.html
idna/: index.html
imagesize/: index.html
importlib-metadata/: index.html
jinja2/: index.html
markupsafe/: index.html
natsort/: index.html  natsort-7.1.1-py3-none-any.whl.metadata
packaging/: index.html
pydash/: index.html  pydash-5.0.0-py3-none-any.whl  pydash-5.0.0-py3-none-any.whl.metadata
pygments/: index.html
pyparsing/: index.html
pytz/: index.html
requests/: index.html
setuptools/: index.html
shippinglabel/: index.html  shippinglabel-0.15.0-py3-none-any.whl  shippinglabel-0.15.0-py3-none-any.whl.metadata
simple503/: __init__.py  __main__.py  config.py  utils.py
snowballstemmer/: index.html
sphinx/: Sphinx-3.5.4-py3-none-any.whl  Sphinx-3.5.4-py3-none-any.whl.metadata  index.html
sphinxcontrib-applehelp/: index.html
sphinxcontrib-devhelp/: index.html
sphinxcontrib-htmlhelp/: index.html  sphinxcontrib_htmlhelp-2.0.0-py2.py3-none-any.whl
sphinxcontrib-jsmath/: index.html
sphinxcontrib-qthelp/: index.html
sphinxcontrib-serializinghtml/: index.html  sphinxcontrib_serializinghtml-1.1.5-py2.py3-none-any.whl
tests/: conftest.py  requirements.txt  test_cleanup.py  test_cli.py  test_cli_config.py  test_config.py  test_simple503.py  test_utils.py  test_wheel_file.py  yaml_path.py
tests/test_cli_/: test_index_page.html  test_project_page.html  test_project_page_no_metadata.html  test_to_target_move.html  test_to_target_move.yml
tests/test_cli_config_/: test_base_url.html  test_inplace.yml  test_to_target_False_.yml  test_to_target_True_.yml
tests/test_config_/: test_correct_base_url_.yml  test_correct_base_url_copy_.yml  test_correct_base_url_copy_false_.yml  test_correct_base_url_copy_false_no_extract_.yml  test_correct_base_url_sort_.yml  test_correct_base_url_sort_copy_.yml  test_correct_base_url_sort_false_.yml  test_correct_target_.yml
tests/test_simple503_/: test_generate_project_page.html  test_index_page.html  test_project_page.html  test_to_target_move.html  test_to_target_no_copy_subdirs.html  test_to_target_no_copy_subdirs.yml  test_to_target_sort.html  test_to_target_sort.yml  test_to_target_sort_subdirs.yml  test_unwanted_dirs_False_.yml  test_unwanted_dirs_True_.yml
tests/test_utils_/: test_cleanup.yml
tests/test_wheel_file_/: test_wheel_file_Babel_2_9_1_py2_py3_none_any_whl_.html  test_wheel_file_Jinja2_3_0_1_py3_none_any_whl_.html  test_wheel_file_MarkupSafe_2_0_1_cp38_cp38_manylinux2010_x86_64_whl_.html  test_wheel_file_Pygments_2_9_0_py3_none_any_whl_.html  test_wheel_file_Sphinx_3_5_4_py3_none_any_whl_.html  test_wheel_file_alabaster_0_7_12_py2_py3_none_any_whl_.html  test_wheel_file_apeye_1_0_1_py3_none_any_whl_.html  test_wheel_file_appdirs_1_4_4_py2_py3_none_any_whl_.html  test_wheel_file_cawdrey_0_4_2_py3_none_any_whl_.html  test_wheel_file_certifi_2021_5_30_py2_py3_none_any_whl_.html  test_wheel_file_chardet_4_0_0_py2_py3_none_any_whl_.html  test_wheel_file_default_values_0_5_0_py3_none_any_whl_.html  test_wheel_file_docutils_0_16_py2_py3_none_any_whl_.html  test_wheel_file_dom_toml_0_5_0_py3_none_any_whl_.html  test_wheel_file_domdf_python_tools_0_10_0_py3_none_any_whl_.html  test_wheel_file_domdf_python_tools_0_9_2_py3_none_any_whl_.html  test_wheel_file_domdf_python_tools_1_2_0_py3_none_any_whl_.html  test_wheel_file_domdf_python_tools_1_3_0_py3_none_any_whl_.html  test_wheel_file_domdf_python_tools_1_7_0_py3_none_any_whl_.html  test_wheel_file_domdf_python_tools_1_9_0_py3_none_any_whl_.html  test_wheel_file_domdf_python_tools_2_0_0_py3_none_any_whl_.html  test_wheel_file_domdf_python_tools_2_1_0_py3_none_any_whl_.html  (+30 more)
toml/: index.html
trove-classifiers/: index.html  trove_classifiers-2021.4.5-py3-none-any.whl.metadata
typing-extensions/: index.html
urllib3/: index.html
wheel-filename/: index.html  wheel_filename-1.3.0-py3-none-any.whl.metadata
zipp/: index.html
(+16 files in other folders)
